Add additional maintainers

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
 
 requirements:
   host:
@@ -38,4 +38,7 @@ about:
 
 extra:
   recipe-maintainers:
+    - andrea-petrocchi
+    - fangohr
+    - lang-m
     - swapneelap
