--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - python {{ python_min }}
     - setuptools >=61.0
+    - hatchling
     - pip
   run:
     - python >={{ python_min }}
