Add dependencies for mammos packages

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,13 @@ requirements:
     - pip
   run:
     - python >={{ python_min }}
+    - mammos-ai ==0.2.0
+    - mammos-analysis ==0.4.0
+    - mammos-dft ==0.4.1
+    - mammos-entity ==0.11.1
+    - mammos-mumag ==0.10.1
+    - mammos-spindynamics ==0.3.1
+    - mammos-units ==0.3.2
 
 test:
   imports:
